[network] Fix sort indicator for Waterfall in High Contrast mode.
Bug: chromium:1515525, chromium:1421730, chromium:1514825
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5169207
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>
Auto-Submit: Benedikt Meurer <bmeurer@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/panels/network/networkLogView.css
+++ b/front_end/panels/network/networkLogView.css
@@ -435,13 +435,21 @@
 
   .network-waterfall-header:hover {
     forced-color-adjust: none;
-    background-color: Highlight;
+    background-color: Highlight !important; /* stylelint-disable-line declaration-no-important */
+
+    & > div.hover-layer {
+      display: none;
+    }
   }
 
   .network-waterfall-header.small,
   .network-log-grid.data-grid.small thead .network-waterfall-header,
   .network-log-grid.data-grid thead {
     background-color: canvas;
+  }
+
+  .network-waterfall-header .sort-order-icon-container devtools-icon {
+    background-color: inherit;
   }
 
   .network-waterfall-header:hover .sort-order-icon-container devtools-icon {
